In-Car Video Creation (#81)
* First step

Initial Docker and CDK

Original processing code

Creating Model Manager

Black formatting

Resource files

Restructuring

S3 properties

Standard Lambda

First lambda that downloads the provided file

Progress

Make query work

Updates

Fix typo

Model search is working

Upload to processing bucket

Fix identity resolution

Create batch job

Try to enable logging

Fix API bug if logged in as Admin

Fix docker inputs

First working video creation

First upload

It works...

Renaming to CarLogsManager

Make filename unique

Simplify naming of tables and buckets

Formatting

Remove natGateway

First commit

Add, Delete and Get works

Handling deletion

Asset table mechanism completed

Remove test flag

Fix delete monitoring + add subscriptions

* Working UI

Functioning fetch script + UI integration

* Adding processing function steps to SFN

* Basic processing page

* Missing keys

* Key mismatch

* Use in-progress not pending

* Read path from ROS param

* Custom sorting for assets tables

* Compatibility with ROS Humble + restart service when delete logs + delete inference logs

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -23,6 +23,7 @@
     "clear-selected": "Clear selected",
     "clear-filters": "Clear filters",
     "confirm": "Confirm",
+    "download": "Download",
     "save": "Save",
     "save-changes": "Save changes",
     "delete": "Delete",
@@ -128,6 +129,64 @@
     "download-printable-label": "Download printable label",
     "download-printable-labels": "Download printable labels"
   },
+  "carlogs": {
+    "assets": {
+      "header": "Car Logs & Videos",
+      "car-name": "Car",
+      "car-fleet-name": "Fleet",
+      "close-modal-ari-label": "Close modal",
+      "description": "Manage your car logs and videos.",
+      "operator.description": "Operators can view and manage car logs and videos.",
+      "delete-assets": "Delete selected assets",
+      "delete-asset": "Delete asset",
+      "delete-modal": {
+        "header": "Delete assets?",
+        "description": "Are you sure you want to delete the following assets?"
+      },
+      "download-asset": "Download asset",
+      "download-assets": "Download selected assets",
+      "download-modal": {
+        "header": "Download assets",
+        "description": "Are you sure you want to download the following assets?"
+      },
+      "model-information": "Model Information",
+      "model-name": "Model Name",
+      "type": "Type",
+      "filename": "Filename",
+      "upload-date": "Upload Date",
+      "user-name": "Username",
+      "status": "Status",
+      "start-time": "Start Time",
+      "loading-models": "Loading models...",
+      "loading-processing": "Loading processing logs...",
+      "tab1": "Assets",
+      "tab2": "Processing logs",
+      "types": {
+        "video": "Video",
+        "bag_sqlite": "ROS Bag - SQLite"
+      },
+      "notifications": {
+        "downloading": "Downloading file",
+        "download-successful": "Downloaded file",
+        "download-failed": "Could not download file",
+        "dismiss-message": "Dismiss message"
+      },
+      "proc-header": "Processing logs"
+    },
+    "upload": {
+      "status": {
+        "created": "Created",
+        "requested_upload": "Requested upload",
+        "waiting_for_upload": "Waiting for upload",
+        "upload_failed": "Upload failed",
+        "uploaded": "Uploaded",
+        "analyzed": "Analyzed",
+        "processing": "Processing",
+        "done": "Done",
+        "failed": "Failed"
+      }
+    }
+  },
   "carmodelupload": {
     "clear-filter": "Clear filter",
     "clear": "Clear car models first?",
@@ -211,7 +270,7 @@
   },
   "events": {
     "events-information": "Event information",
-    "rovider.please-select-an-event": "Select an event",
+    "provider.please-select-an-event": "Select an event",
     "create-event": "Create event",
     "edit-event": "Edit event",
     "description": "An event is a physical DeepRacer competition.",
@@ -361,6 +420,7 @@
     "edit-cars.delete-models-header": "Delete models on cars",
     "edit-cars.delete-models-message": "Are you sure you want to delete models on cars(s)",
     "edit-cars.edit-cars": "Edit devices",
+    "edit-cars.fetch-logs": "Fetch logs",
     "edit-cars.select-color": "Select colour",
     "edit-cars.select-fleet": "Fleet",
     "edit-cars.update-fleets": "Update fleets",
@@ -423,21 +483,22 @@
   "users-list.header": "Users",
   "users-list.description": "Users are assigned roles that determine which actions they can perform in DREM.",
   "notifications": {
-      "item-type-event": "Event",
-      "item-type-user": "User",
-      "item-type-race": "Race",
-      "item-type-model": "Model",
-      "creating-item": "Creating {{itemType}} {{itemName}}...",
-      "create-item-success": "{{itemType}} {{itemName}} created",
-      "create-item-error": "{{itemType} {{itemName}} could not be created, {{errorMessage}}",
-      "updating-item": "Updating {{itemType}} {{itemName}}...",
-      "update-item-success": "{{itemType}} {{itemName}} updated",
-      "update-item-error": "{{itemType}} {{itemName}} could not be updated, {{errorMessage}}",
-      "deleting-item": "Deleting {{itemType}} {{itemName}}...",
-      "delete-item-success": "{{itemType}} {{itemName}} deleted",
-      "delete-item-error": "{{itemType}} {{itemName}} could not be deleted, {{errorMessage}}"
+    "item-type-event": "Event",
+    "item-type-user": "User",
+    "item-type-race": "Race",
+    "item-type-model": "Model",
+    "creating-item": "Creating {{itemType}} {{itemName}}...",
+    "create-item-success": "{{itemType}} {{itemName}} created",
+    "create-item-error": "{{itemType} {{itemName}} could not be created, {{errorMessage}}",
+    "updating-item": "Updating {{itemType}} {{itemName}}...",
+    "update-item-success": "{{itemType}} {{itemName}} updated",
+    "update-item-error": "{{itemType}} {{itemName}} could not be updated, {{errorMessage}}",
+    "deleting-item": "Deleting {{itemType}} {{itemName}}...",
+    "delete-item-success": "{{itemType}} {{itemName}} deleted",
+    "delete-item-error": "{{itemType}} {{itemName}} could not be deleted, {{errorMessage}}"
   },
   "home.breadcrumb": "Home",
+  "home.header": "DeepRacer Event Manager",
   "homeCards": {
     "homeCards.models-description": "Model management",
     "homeCards.models": "Models",
@@ -465,6 +526,7 @@
     "models": "Models",
     "breadcrumb": "Model management",
     "models.breadcrumb": "Models",
+    "models.assets.breadcrumb": "Car logs and videos",
     "all-breadcrumb": "All models",
     "header": "Model management",
     "description": "Upload and manage your models.",
@@ -622,6 +684,7 @@
     "models-management": "Model management",
     "models": "Models",
     "models-own": "Model management",
+    "models-logsvideo": "Car logs and videos",
     "more": "More",
     "quarantined-models": "Quarantined models",
     "search": "Search",
@@ -642,54 +705,54 @@
   "commentator": {
     "breadcrumb": "Commentator",
     "race": {
-    "header": "Race statistics",
-    "stats": "Details about the current racer and race.",
-    "breadcrumb": "Race statistics",
-    "actual-racer-stats-header": "Current racer",
-    "actual-racer-stats": "",
-    "time": "Time",
-    "racerName": "Racer name",
-    "racerFastestLap": "Fastest time",
-    "racerSlowestLap": "Slowest time",
-    "overallFastestLaps": "Fastest racer",
-    "loading": "Loading resources",
-    "overallSlowestLaps": "Slowest racer",
-    "currentLapTime": "Current lap time",
-    "timeLeft": "Time left",
-    "lapCount": "# of laps ",
-    "invalidLapCount": "Not valid laps",
-    "historicalRacerStats": "",
-    "historicalRacerStats.header_one": "Data from previous <1>{{count}}</1> run",
-    "historicalRacerStats.header_other": "Data from previous <1>{{count}}</1> runs",
-    "averagelapCount": "Average laps per run",
-    "restSum": "# of Resets",
-    "averageResetsPerLap": "Average resets per lap",
-    "fastest": "Fastest lap (Run)",
-    "fastestLapId": "Lap",
-    "fastestAvg": "Fastest avg. (Run)",
-    "fastestAvgWindow": "Laps",
-    "rank": "Rank",
-    "gapToFastest": "Gap to 1st",
-    "actualPosition": "Actual position",
-    "newPosition": "New position",
-    "graph": {
-      "fastestAvgLap": "Fastest average lap time",
-      "fastestLap": "Fastest lap time",
-      "invalidLaps": "Not valid",
-      "validLaps": "Valid",
-      "fastestRaceLap": "Fastest of Race",
-      "fastestOfEventRaceLap": "Fastest of Event",
-      "fastestAvgWindow": "Fastest average window",
-      "fastestOfEventAvgWindow": "Fastest average window of Event"
-    },
-    "status": "Status",
-    "status.NO_RACER_SELECTED": "Not running",
-    "status.READY_TO_START": "Ready to start",
-    "status.RACE_IN_PROGRESS": "Race running",
-    "status.RACE_PAUSED": "Race paused",
-    "status.RACE_FINSIHED": "Race finished",
-    "status.RACE_SUBMITTED": "Race finished",
-    "status.undefined": "Not running"
+      "header": "Race statistics",
+      "stats": "Details about the current racer and race.",
+      "breadcrumb": "Race statistics",
+      "actual-racer-stats-header": "Current racer",
+      "actual-racer-stats": "",
+      "time": "Time",
+      "racerName": "Racer name",
+      "racerFastestLap": "Fastest time",
+      "racerSlowestLap": "Slowest time",
+      "overallFastestLaps": "Fastest racer",
+      "loading": "Loading resources",
+      "overallSlowestLaps": "Slowest racer",
+      "currentLapTime": "Current lap time",
+      "timeLeft": "Time left",
+      "lapCount": "# of laps ",
+      "invalidLapCount": "Not valid laps",
+      "historicalRacerStats": "",
+      "historicalRacerStats.header_one": "Data from previous <1>{{count}}</1> run",
+      "historicalRacerStats.header_other": "Data from previous <1>{{count}}</1> runs",
+      "averagelapCount": "Average laps per run",
+      "restSum": "# of Resets",
+      "averageResetsPerLap": "Average resets per lap",
+      "fastest": "Fastest lap (Run)",
+      "fastestLapId": "Lap",
+      "fastestAvg": "Fastest avg. (Run)",
+      "fastestAvgWindow": "Laps",
+      "rank": "Rank",
+      "gapToFastest": "Gap to 1st",
+      "actualPosition": "Actual position",
+      "newPosition": "New position",
+      "graph": {
+        "fastestAvgLap": "Fastest average lap time",
+        "fastestLap": "Fastest lap time",
+        "invalidLaps": "Not valid",
+        "validLaps": "Valid",
+        "fastestRaceLap": "Fastest of Race",
+        "fastestOfEventRaceLap": "Fastest of Event",
+        "fastestAvgWindow": "Fastest average window",
+        "fastestOfEventAvgWindow": "Fastest average window of Event"
+      },
+      "status": "Status",
+      "status.NO_RACER_SELECTED": "Not running",
+      "status.READY_TO_START": "Ready to start",
+      "status.RACE_IN_PROGRESS": "Race running",
+      "status.RACE_PAUSED": "Race paused",
+      "status.RACE_FINSIHED": "Race finished",
+      "status.RACE_SUBMITTED": "Race finished",
+      "status.undefined": "Not running"
     }
   },
   "user-profile": {
