--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -131,6 +131,7 @@
   },
   "carlogs": {
     "assets": {
+      "actions": "Actions",
       "header": "Car Logs & Videos",
       "car-name": "Car",
       "car-fleet-name": "Fleet",
@@ -149,6 +150,7 @@
         "header": "Download assets",
         "description": "Are you sure you want to download the following assets?"
       },
+      "fetch-job-id": "Fetch Job ID",
       "model-information": "Model Information",
       "model-name": "Model Name",
       "type": "Type",
@@ -160,7 +162,7 @@
       "loading-models": "Loading models...",
       "loading-processing": "Loading processing logs...",
       "tab1": "Assets",
-      "tab2": "Processing logs",
+      "tab2": "Processing Logs",
       "types": {
         "video": "Video",
         "bag_sqlite": "ROS Bag - SQLite"
@@ -171,7 +173,7 @@
         "download-failed": "Could not download file",
         "dismiss-message": "Dismiss message"
       },
-      "proc-header": "Processing logs"
+      "proc-header": "Processing Logs"
     },
     "upload": {
       "status": {
