Track if car is logging capable

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -261,6 +261,7 @@
     "host-name": "Host name",
     "instance": "Instance",
     "last-ping-time": "Last ping time",
+    "loggingcapable": "Logging capable",
     "loading": "Loading devices",
     "offline": "Offline",
     "online": "Online",
@@ -275,6 +276,7 @@
       "label-error": "Error creating car label for",
       "fetch-start": "Fetching car logs for ",
       "fetch-error": "Error fetching car logs for ",
+      "fetch-not-possible": " does not support logging.",
       "restart-start": "Restarting DeepRacer service for selected cars",
       "restart-error": "Error restarting DeepRacer service for selected cars ",
       "emergencystop-start": "Emergency stop for selected cars triggered",
