Button dropdown in devices list

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -243,18 +243,22 @@
     "registration-date": "Registration date"
   },
   "devices": {
+    "actions": "Actions",
     "device-information": "Device information",
     "agent-version": "Agent version",
     "breadcrumb": "Devices",
     "type": "Device type",
     "car-information": "Device information",
     "core-sw-version": "Core software",
+    "delete-models": "Delete models",
     "device-links": "Device links",
     "device-links.timer": "Timer console",
     "device-links.car": "Car console",
     "device-links.camera": "Camera stream",
     "car-ip": "Device IP",
+    "car-stop": "Emergency stop",
     "description": "List of devices registered in DREM",
+    "fetch-logs": "Fetch logs",
     "fleet-id": "Fleet ID",
     "fleet-name": "Fleet name",
     "header": "Devices",
@@ -266,6 +270,7 @@
     "offline": "Offline",
     "online": "Online",
     "registration-date": "Registration date",
+    "restart-service": "Restart DeepRacer service",
     "filter-deepracer": "DeepRacer car",
     "filter-timer": "Timer",
     "cars": "Cars",
