--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -248,6 +248,7 @@
     "agent-version": "Agent version",
     "breadcrumb": "Devices",
     "type": "Device type",
+    "clean-car": "Clean car",
     "car-information": "Device information",
     "core-sw-version": "Core software",
     "delete-models": "Delete models",
@@ -286,8 +287,8 @@
       "restart-error": "Error restarting DeepRacer service for selected cars ",
       "emergencystop-start": "Emergency stop for selected cars triggered",
       "emergencystop-error": "Error triggering emergency stop for selected cars",
-      "deleteall-start": "Deleting all models for selected cars",
-      "deleteall-error": "Error deleting all models for selected cars",
+      "deleteall-start": "Deleting all models and logs on selected cars",
+      "deleteall-error": "Error deleting all models and logs on selected cars",
       "updatefleet-start": "Updating fleet for selected cars to ",
       "updatefleet-error": "Error updating fleet",
       "settaillight-start": "Setting taillight color for selected cars",
@@ -443,9 +444,10 @@
     "delete-warning": "Are you sure you want to delete fleet(s)",
     "description": "You can create a fleet by providing a name and adding cars.",
     "edit-description": "You can edit a fleet by adding and removing cars and changing the fleet name.",
-    "edit-cars.delete-models": "Delete models",
-    "edit-cars.delete-models-header": "Delete models on cars",
-    "edit-cars.delete-models-message": "Are you sure you want to delete models on cars(s)",
+    "edit-cars.logs-and-models": "Logs and models",
+    "edit-cars.clean-cars": "Clean cars",
+    "edit-cars.clean-cars-header": "Clean cars",
+    "edit-cars.clean-cars-message": "Are you sure you want to delete models and logs, including ROS logs, on cars(s)",
     "edit-cars.edit-cars": "Edit devices",
     "edit-cars.fetch-logs": "Fetch logs",
     "edit-cars.select-color": "Select colour",
