Refactor and Improve Device Handling (#95)
* Initial refactoring

* Adding subscription for Cars

* Trigger the state function if it has not run the last minute

* Add API calls into main API file for cars

* Track if car is logging capable

* Button dropdown in devices list

* Allow filter on racer

* Column fixes

* Clean car option - with or without ROS logs

* Make notifications time out

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -247,30 +247,58 @@
     "registration-date": "Registration date"
   },
   "devices": {
+    "actions": "Actions",
     "device-information": "Device information",
     "agent-version": "Agent version",
     "breadcrumb": "Devices",
     "type": "Device type",
+    "clean-car": "Clean car",
     "car-information": "Device information",
+    "core-sw-version": "Core software",
+    "delete-models": "Delete models",
     "device-links": "Device links",
     "device-links.timer": "Timer console",
     "device-links.car": "Car console",
     "device-links.camera": "Camera stream",
     "car-ip": "Device IP",
+    "car-stop": "Emergency stop",
     "description": "List of devices registered in DREM",
+    "fetch-logs": "Fetch logs",
     "fleet-id": "Fleet ID",
     "fleet-name": "Fleet name",
     "header": "Devices",
     "host-name": "Host name",
     "instance": "Instance",
     "last-ping-time": "Last ping time",
+    "loggingcapable": "Logging capable",
     "loading": "Loading devices",
     "offline": "Offline",
     "online": "Online",
     "registration-date": "Registration date",
+    "restart-service": "Restart DeepRacer service",
     "filter-deepracer": "DeepRacer car",
     "filter-timer": "Timer",
-    "cars": "Cars"
+    "cars": "Cars",
+    "notifications": {
+      "dismiss-message": "Dismiss message",
+      "label-start": "Creatin car label for ",
+      "label-ready": "Car Label is ready for ",
+      "label-error": "Error creating car label for",
+      "fetch-start": "Fetching car logs for ",
+      "fetch-error": "Error fetching car logs for ",
+      "fetch-not-possible": " does not support logging.",
+      "restart-start": "Restarting DeepRacer service for selected cars",
+      "restart-error": "Error restarting DeepRacer service for selected cars ",
+      "emergencystop-start": "Emergency stop for selected cars triggered",
+      "emergencystop-error": "Error triggering emergency stop for selected cars",
+      "deleteall-start": "Deleting all models and logs on selected cars",
+      "deleteall-error": "Error deleting all models and logs on selected cars",
+      "updatefleet-start": "Updating fleet for selected cars to ",
+      "updatefleet-error": "Error updating fleet",
+      "settaillight-start": "Setting taillight color for selected cars",
+      "settaillight-error": "Error setting taillight color for selected cars",
+      "gettaillight-error": "Error getting available taillight colors"
+    }
   },
   "events": {
     "events-information": "Event information",
@@ -420,9 +448,10 @@
     "delete-warning": "Are you sure you want to delete fleet(s)",
     "description": "You can create a fleet by providing a name and adding cars.",
     "edit-description": "You can edit a fleet by adding and removing cars and changing the fleet name.",
-    "edit-cars.delete-models": "Delete models",
-    "edit-cars.delete-models-header": "Delete models on cars",
-    "edit-cars.delete-models-message": "Are you sure you want to delete models on cars(s)",
+    "edit-cars.logs-and-models": "Logs and models",
+    "edit-cars.clean-cars": "Clean cars",
+    "edit-cars.clean-cars-header": "Clean cars",
+    "edit-cars.clean-cars-message": "Are you sure you want to delete models and logs, including ROS logs, on cars(s)",
     "edit-cars.edit-cars": "Edit devices",
     "edit-cars.fetch-logs": "Fetch logs",
     "edit-cars.select-color": "Select colour",
