Enable Fetching of Logs from Timekeeper (#99)
* Initial refactoring

* Adding subscription for Cars

* Trigger the state function if it has not run the last minute

* Add API calls into main API file for cars

* Track if car is logging capable

* Button dropdown in devices list

* Allow filter on racer

* Column fixes

* Clean car option - with or without ROS logs

* Make notifications time out

* Embed fetching of logs in time-keeper

* Fix fetch logs button

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -653,6 +653,7 @@
     "end-session.warning-message": "Discarding the race will delete the race without saving it!",
     "end-session.page-header": "Timekeeper: Submit race",
     "end-session.page-description": "Check lap information and racer details before submitting a race to the leaderboard.",
+    "end-session.fetch-logs": "Fetch logs",
     "fastest-lap": "Fastest lap",
     "lap-table.valid-header": "Valid",
     "lap-table.valid": "Yes",
