--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -293,6 +293,10 @@
       "emergencystop-error": "Error triggering emergency stop for selected cars",
       "deleteall-start": "Deleting all models and logs on selected cars",
       "deleteall-error": "Error deleting all models and logs on selected cars",
+      "deletedevice-start": "Deleting selected {{count}} device(s)",
+      "deletedevice-complete": "Deleted selected {{count}} device(s)",
+      "deletedevice-warning": "Deleted {{deleted}} of {{count}} selected device(s)",
+      "deletedevice-error": "Error deleting selected devices",
       "updatefleet-start": "Updating fleet for selected cars to ",
       "updatefleet-error": "Error updating fleet",
       "settaillight-start": "Setting taillight color for selected cars",
@@ -451,8 +455,11 @@
     "edit-cars.logs-and-models": "Logs and models",
     "edit-cars.clean-cars": "Clean cars",
     "edit-cars.clean-cars-header": "Clean cars",
-    "edit-cars.clean-cars-message": "Are you sure you want to delete models and logs, including ROS logs, on cars(s)",
-    "edit-cars.edit-cars": "Edit devices",
+    "edit-cars.clean-cars-message": "Are you sure you want to delete models and logs, including ROS logs, on car(s)",
+    "edit-cars.delete": "Delete device",
+    "edit-cars.delete-cars-header": "Delete device",
+    "edit-cars.delete-cars-message": "Are you sure you want to delete the device(s)",
+    "edit-cars.edit-cars": "Manage devices",
     "edit-cars.fetch-logs": "Fetch logs",
     "edit-cars.select-color": "Select colour",
     "edit-cars.select-fleet": "Fleet",
