--- a/website/public/locales/en/help-admin-car-activation.json
+++ b/website/public/locales/en/help-admin-car-activation.json
@@ -1,5 +1,5 @@
 {
   "header": "## Car activation",
-  "content": "On this page, you register a car for use in a race and ensure that it is connected to Wi-Fi and is discoverable by DREM. To activate a car, select the fleet to which it belongs. Enter the **Hostname** and **Password** and optional Wi-Fi credentials for the car.",
+  "content": "On this page, you register a car for use in a race and ensure that it is connected to Wi-Fi and is discoverable by DREM. To activate a car, select the fleet to which it belongs. Enter the **Hostname** and **Password** and optional Wi-Fi credentials for the car.\n\nThe community car console is an updated version of the web UI installed on the car implemented in Cloudscape. See https://github.com/aws-deepracer-community/deepracer-custom-console for more information.",
   "footer": ""
 }
