Feature: Video Creation on Race End (#124)
* Provide Race Data to Batch job

* Timekeeper startTime fix!

* Fix upload for users with _ in username

* Allow filter on listUsers

* Improved handling

* Notification fixes + labels

* Fix API call

* Updated e-2-e flow passing raceData and eventName

* New video grouping mechanism

* Add more fonts

* Rename font files

* Add title page

* Release candidate

* Configuration via S3

* Fix data in dict

* Fix filtering

* Ensure reset of fetchLogsEnable

* Translations not working due to incorrect "settings" key clash

* Fix bug #125

---------

Co-authored-by: David Smith <dave@dave-smith.co.uk>

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -152,6 +152,7 @@
         "header": "Download assets",
         "description": "Are you sure you want to download the following assets?"
       },
+      "event-name": "Event",
       "fetch-job-id": "Fetch Job ID",
       "model-information": "Model Information",
       "model-name": "Model Name",
@@ -524,6 +525,7 @@
   "users-list.header": "Users",
   "users-list.description": "Users are assigned roles that determine which actions they can perform in DREM.",
   "notifications": {
+    "item-type-asset": "Assset",
     "item-type-event": "Event",
     "item-type-user": "User",
     "item-type-race": "Race",
@@ -802,15 +804,15 @@
     "header": "Account details",
     "header.details": "Account details",
     "description": "Update your user settings and password.",
-    "settings.name": "Name",
     "breadcrumb": "User",
-    "settings.breadcrumb": "Settings",
     "buttons.delete": "Delete account",
     "modal.button.delete-confirm": "Confirm",
     "modal.header-delete-account": "Delete DREM account",
     "modal.confirm-delete-account": "Are you sure you wish to delete your DREM account, this action is not reversible?",
     "buttons.update-password": "Change your password",
     "settings": {
+      "breadcrumb": "Settings",
+      "name": "Name",
       "delete.header": "Delete your DREM account",
       "changepw.header": "Complete the form to update your password",
       "form": {
