--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -369,8 +369,8 @@
       "resets-per-lap": "Resets per lap",
       "resets-per-lap-description": "Defines how many times the car may go of track during a lap before the lap is disqualified.",
       "unlimited": "Unlimited",
-      "ranking.best-lap-time": "Best lap time",
-      "ranking.finish-x-laps": "Finish x laps",
+      "ranking.best-lap-time": "Hello Best lap time",
+      "ranking.finish-x-laps": "Kitty Finish x laps",
       "ranking.best-average-lap-time-x-lap": "Average over X laps window",
       "ranking.total-race-time": "Total Race Time",
       "race-customisations": "Race customisations",
