initial implementation for total_race_time

--- a/website-leaderboard/public/locales/en/translation.json
+++ b/website-leaderboard/public/locales/en/translation.json
@@ -3,6 +3,9 @@
   "leaderboard.racer": "Racer",
   "leaderboard.time": "Fastest Lap Time",
   "leaderboard.average": "Average Lap Time",
+  "leaderboard.totalTime": "Total Race Time",
+  "leaderboard.emptyState": "No Racers",
+  "leaderboard.emptyStateMessage": "Complete a race with valid laps to appear on leaderboard",
   "leaderboard.flag": "Flag",
   "leaderboard.DNF": "DNF",
   "leaderboard.summary-footer.finsiher": "NEW FINISHER",
